# heart_disease_prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: heart_disease_uci_preprocessed.csv
models/: baseline_model.joblib
notebooks/: mvp.ipynb
