[project]
name = "heart-disease-prediction"
version = "0.1.0"
description = "Model to predict heart disease"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "evidently>=0.4.0",
    "fairlearn==0.13.0",
    "flask>=3.0.0",
    "ipykernel>=6.25.0",
    "joblib>=1.3.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "mlflow>=2.10.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
]
